# zbus

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.zbus  Makefile  README.rst  compile_commands.json  extra_script.py  platformio.ini  prj.conf  renode_setup.resc  zbus.yaml
.cache/clangd/index/: core.c.AAE35BA25195FC30.idx  main.c.4FA15B7481BC43F7.idx  net.c.BB312FDE762A7841.idx  peripheral.c.3E935D0FF37B0483.idx  zbus.c.3C1C2487670C380F.idx  zbus.h.FA7D689739FAA83C.idx  zbus_channels.def.49FA1818FF6C04A7.idx  zbus_private.h.DFBB04FD44EC0E48.idx  (+1 more)
include/: .#zbus.h  zbus.h  zbus_channels.def  zbus_private.h  zeta.h  zeta_channels.h  zeta_messages.h
samples/benchmark_dyn_one_to_many/: CMakeLists.txt  Makefile  README.md  benchmark_memory.robot  init.gdb  prj.conf  renode_run.resc  run.py
samples/benchmark_message_size/: CMakeLists.txt  prj.conf
samples/benchmark_one_to_many/: CMakeLists.txt  Kconfig  Makefile  README.md  init.gdb  prj.conf  renode_profile.robot  run.py
samples/benchmark_one_to_many/include/: zbus_channels.h  zbus_messages.h
samples/benchmark_one_to_many/src/: benchmark.c  benchmark_callback.c  benchmark_thread.c
samples/dyn_channel/: .gdb_history  CMakeLists.txt  Makefile  init.gdb  prj.conf  sample.yaml
samples/hello_world/: CMakeLists.txt  Makefile  prj.conf  sample.yaml
samples/hello_world/include/: zbus_channels.h  zbus_messages.h
samples/hello_world/src/: main.c
samples/remote_mock/: CMakeLists.txt  Makefile  hifive1_revb.overlay  init.gdb  prj.conf  remote_mock.py  renode_debug.resc  renode_setup.resc  sample.yaml
samples/remote_mock/include/: ct_uart.h  zbus_channels.h  zbus_messages.h
samples/remote_mock/src/: ct_uart.c  mock_proxy.c  peripheral.c
samples/uart_bridge/: CMakeLists.txt  Makefile  README.md  decoder.py  native_posix.overlay  nrf52840dk_nrf52840.overlay  prj.conf  prj_hifive1_revb.conf  prj_native_posix.conf  prj_nrf52840dk_nrf52840.conf  sample.yaml  testcase.yaml
samples/work_queue/: CMakeLists.txt  Makefile  prj.conf  sample.yaml
samples/zbus_as_a_module/: CMakeLists.txt  Makefile  prj.conf
scripts/: clean_i_files.py
src/: acore.c  core.c  main.c  net.c  peripheral.c  zbus.c
tests/: dev.makefile
tests/dyn_channel/: CMakeLists.txt  prj.conf
tests/extension/: CMakeLists.txt  prj.conf
tests/integration/: CMakeLists.txt  Makefile  integration_test.robot  prj.conf  test.robot  testcase.yaml
tests/unittests/: CMakeLists.txt  Kconfig  Makefile  compile_commands.json  prj.conf  testcase.yaml
tests/user_data/: prj.conf  testcase.yaml
zephyr/: CMakeLists.txt  module.yml
(+45 files in other folders)
